Comment out GitHub owner and name in .goreleaser.yml
Comment out GitHub owner and name in release section.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -92,8 +92,8 @@ archives:
 
 release:
   github:
-    owner: ochinchina
-    name: supervisord
+    # owner: ochinchina
+    # name: supervisord
   draft: false
   prerelease: auto
   name_template: "{{.ProjectName}}-v{{.Version}}"
